packages/compiler-rs/tests/snapshots/v_once__inside_v_once.snap
---
source: tests/v_once.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div><div></div></div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
