packages/compiler-rs/tests/snapshots/v_once__with_v_for.snap
---
source: tests/v_once.rs
expression: code
---
import { createFor as _createFor, template as _template } from "vue";
const t0 = _template("<div></div>");
(() => {
  const n0 = _createFor(() => list, (_for_item0) => {
    const n2 = t0();
    return n2;
  }, void 0, 4);
  return n0;
})();
