packages/compiler-rs/tests/snapshots/v_once__with_v_if.snap
---
source: tests/v_once.rs
expression: code
---
import { createIf as _createIf, template as _template } from "vue";
const t0 = _template("<div></div>");
(() => {
  const n0 = _createIf(() => expr, () => {
    const n2 = t0();
    return n2;
  }, null, true);
  return n0;
})();
